--- a/BlogPost/Blogs/templates/index.html
+++ b/BlogPost/Blogs/templates/index.html
@@ -36,6 +36,9 @@
           {% endfor %}
         </tbody>
       </table>
+      <div class="mb-4">
+        <a href="add/1" class="btn btn-primary">New Blog</a>
+      </div>
     </div>
   <!-- Optional JavaScript; choose one of the two! -->
 
