--- a/BlogPost/Blogs/templates/newtitle.html
+++ b/BlogPost/Blogs/templates/newtitle.html
@@ -3,25 +3,26 @@
 {% block content %}
 <h1>Add/Edit Post</h1>
 
-        <form name="sentMessage" id="contactForm" action = "/edit/{{post.sno}}" method="post" novalidate>
+        <form id="contactForm" method="post">
+          {% csrf_token %}
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Title</label>
-              <input type="text" class="form-control" placeholder="Title" id="title" name='title' required data-validation-required-message="Please enter your name." value="{{post.title}}">
+              <input type="text" class="form-control" placeholder="Title" id="title" name='title' required data-validation-required-message="Please enter your name.">
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Tagline</label>
-              <input type="text" class="form-control" placeholder="Tagline" id="tline" name="tline" required data-validation-required-message="Please enter your email address." value="{{post.tagline}}">
+              <input type="text" class="form-control" placeholder="Tagline" id="tline" name="tagline" required data-validation-required-message="Please enter your email address." >
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label>Slug</label>
-              <input type="text" class="form-control" placeholder="Slug" name="slug" id="slug" required data-validation-required-message="Please enter your phone number." value="{{post.slug}}">
+              <input type="text" class="form-control" placeholder="Slug" name="slug" id="slug" required data-validation-required-message="Please enter your phone number.">
               <p class="help-block text-danger"></p>
             </div>
           </div>
@@ -29,14 +30,15 @@
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Content</label>
-              <textarea rows="5" class="form-control" placeholder="Content" name="content" id="content" required data-validation-required-message="Please enter a message.">{{post.content}}</textarea>
+              <textarea rows="5" class="form-control" placeholder="Content" name="content" id="content" required data-validation-required-message="Please enter a message."></textarea>
               <p class="help-block text-danger"></p>
             </div>
           </div>
-        </form>
+
           <br>
           <div id="success"></div>
           <div class="form-group">
-            <a href="blog/add/{{post.id}}"><button type="submit" class="btn btn-primary" id="sendMessageButton">Submit</button></a>
+            <button type="submit" class="btn btn-success">Submit</button>
           </div>
+        </form>
 {% endblock %}
