--- a/BlogPost/Blogs/templates/edit.html
+++ b/BlogPost/Blogs/templates/edit.html
@@ -2,27 +2,26 @@
 
 {% block content %}
 <h1>Add/Edit Post</h1>
-
         <form id="contactForm" method="post">
           {% csrf_token %}
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Title</label>
-              <input type="text" class="form-control" placeholder="Title" id="title" name='title' required data-validation-required-message="Please enter your name.">
+              <input type="text" class="form-control" placeholder="Title" id="title" name='title' required data-validation-required-message="Please enter your name." value="{{posts.title}}">
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Tagline</label>
-              <input type="text" class="form-control" placeholder="Tagline" id="tline" name="tagline" required data-validation-required-message="Please enter your email address.">
+              <input type="text" class="form-control" placeholder="Tagline" id="tline" name="tagline" required data-validation-required-message="Please enter your email address." value="{{posts.tagline}}">
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label>Slug</label>
-              <input type="text" class="form-control" placeholder="Slug" name="slug" id="slug" required data-validation-required-message="Please enter your phone number.">
+              <input type="text" class="form-control" placeholder="Slug" name="slug" id="slug" required data-validation-required-message="Please enter your phone number." value="{{posts.slug}}">
               <p class="help-block text-danger"></p>
             </div>
           </div>
@@ -30,7 +29,7 @@
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Content</label>
-              <textarea rows="5" class="form-control" placeholder="Content" name="content" id="content" required data-validation-required-message="Please enter a message." ></textarea>
+              <textarea rows="5" class="form-control" placeholder="Content" name="content" id="content" required data-validation-required-message="Please enter a message." >{{posts.content}}</textarea>
               <p class="help-block text-danger"></p>
             </div>
           </div>
@@ -41,5 +40,4 @@
             <button type="submit" class="btn btn-success">Submit</button>
           </div>
         </form>
-
 {% endblock %}
